docs/grammar.txt
IGNORE : ' \t\x0c'
DELIM : r';'
ICONST : r'\d+'
ID : r'[A-Za-z_][\w_]*'
NEWLINE : r'\n+'
EQUAL : r'='
LPAREN = r'\('
RPAREN = r'\)'

program : program statement DELIM
        | statement DELIM

statement : declare_statement
          | assign_statement
          | init_statement

declare_statement : type_specifier ID

init_statement : INICIAR LPAREN ID RPAREN

assign_statement : ID EQUAL expression

type_specifier : INT
               | COLA

expression : constant

constant : ICONST
